# ciconia

./: CMakeLists.txt  README.md  package.xml  setup.py
Ciconia/: README.md
Ciconia Trim Analysis/: AT7217_21x10_PropulsionData.mat  AT7217_21x10_PropulsionData_py.mat  MN801S_26x85_PropulsionData.mat  MN801S_26x85_PropulsionData_py.mat  __init__.py  aerodynamic_database.mat  aerodynamics.py  eom.py  gravitational.py  gyroscopic.py  main.py  models.py  numerical_linearization.py  plot.py  propulsion.py  state_space_database.pickle  test.py  test2.py  trim.py  trim_analysis.py  utils.py
Ciconia/ciconia_control/: CMakeLists.txt  package.xml  setup.py
Ciconia/ciconia_control/scripts/: control.py  indoor_control.py  indoor_control2.py  indoor_control_sitl.py  model_predictive_controller.py  pid.py  quaternion.py  utils.py
Ciconia/ciconia_gazebo/: CMakeLists.txt  package.xml  setup.py
Ciconia/ciconia_gazebo/config/: EKF_Config.yaml  ciconia.yaml  joint_names_vtol_v2.yaml  xsensor_model_config.yaml
Ciconia/ciconia_gazebo/launch/: SITL.launch  test.launch
Ciconia/ciconia_gazebo/meshes/: aileronL.STL  aileronR.STL  body.STL  dc_motor_fixed_wing.STL  dcmotorBL.STL  dcmotorBR.STL  dcmotorFL.STL  dcmotorFR.STL  elevator.STL  fixed_wing_propeller.STL  frame.STL  propBL.STL  propFL.STL  rudderL.STL  rudderR.STL  verticaltail.STL
Ciconia/ciconia_gazebo/models/qrkod/: model.sdf
Ciconia/ciconia_gazebo/models/qrkod/materials/textures/: cv_img.py
Ciconia/ciconia_gazebo/plugins/src/: gazeboStatePublisherPlugin.cpp
Ciconia/ciconia_gazebo/scripts/: actuator.py  control.py  data.mat  fligthDynamics.py  main.py  physics.py  scenario.py  stateEstimator.py  state_space_database.pickle  utils.py
Ciconia/ciconia_gazebo/scripts/camera_config/: cameraDistortion_webcam.txt
Ciconia/ciconia_gazebo/scripts/database/: state_space_database.pickle
Ciconia/ciconia_gazebo/scripts/pathplanning/: DubinsPath.py
Ciconia/ciconia_gazebo/urdf/: ciconia.gazebo  ciconia.xacro
Ciconia/ciconia_indoor_test_launch/: CMakeLists.txt  package.xml
Ciconia/ciconia_indoor_test_launch/config/: alt_controller_config.yaml  alt_estimation_config.yaml  apm_config.yaml  apm_pluginlists.yaml
Ciconia/ciconia_indoor_test_launch/launch/: apm.launch  apm_sitl.launch  test.launch  test2.launch
Ciconia/ciconia_logging/: CMakeLists.txt  package.xml  setup.py
Ciconia/ciconia_logging/log/: alt_est_data.csv  barometer_data.csv  imu_data.csv  pid_data.csv  rangefinder_data.csv
Ciconia/ciconia_logging/scripts/: indoor_altitude_log.py  indoor_altitude_log2.py
Ciconia/ciconia_msgs/: CMakeLists.txt  package.xml
Ciconia/ciconia_msgs/msg/: altMPCControl.msg  altPIDControl.msg  motorSignal.msg  quadrotorControl.msg  rcMessages.msg  transitionControl.msg
Ciconia/ciconia_navigation/: CMakeLists.txt  package.xml  setup.py
Ciconia/ciconia_navigation/config/: ahrs.yaml  alt_estimation_config.yaml
Ciconia/ciconia_navigation/scripts/: ahrs.py  alt_KF.py  alt_KF2.py  alt_estimation_node.py  alt_estimation_node2.py  ekf.py  navigation.py  quaternion.py  utils.py
Ciconia/ciconia_sensors/: CMakeLists.txt  package.xml  setup.py
Ciconia/ciconia_sensors/scripts/: differentialPressureSensorModel.py  xsensSensorModel.py
Ciconia/ciconia_serial/: CMakeLists.txt  package.xml  setup.py
Ciconia/ciconia_serial/config/: serial_config.yaml
Ciconia/ciconia_serial/launch/: test.launch
Ciconia/ciconia_serial/scripts/: serial_test.py  serialization.py
akillipaket/: package.xml  setup.cfg  setup.py
akillipaket/akillipaket/: ARUCO_Node.py  Control_Node.py  GPS_Node.py  GPS_Node_backup.py  GPS_deneme.py  GPS_deneme.py.save  GPS_deneme_yedek.py  KALMAN_Node.py  KALMAN_Node_backup.py  KALMAN_Node_backup2.py  LOG_Node.py  MOTOR_Node.py  MPU6050_Node.py  MPU6050_Node.py.save  Magnetometer_Node.py  levelCalibration.py  pid.py  utils.py
akillipaket/akillipaket/MPU6050_driver/: MPU6050.py  MPU6050_example.py  MPUConstants.py
akillipaket/akillipaket/Sensor_Fusion/: Kalman_Filter.py  Kalman_Filter_backup.py  Kalman_Filter_backup2.py
akillipaket/calibration/: cameraCalibration.py  gyroCalibration.py  magnetometerCalibration.py
akillipaket/calibration/calibrationFiles/: camera_distortion.csv  camera_matrix.csv  gyroscope_calibration.yaml  level_calibration.yaml  magnetometer_calibration.yaml
akillipaket/launch/: aruco_test.launch.py  log.launch.py  parachute.launch.py  test.launch.py
akillipaket/log/: acceleration_data.csv  aruco_heading_data.csv  aruco_position_data.csv  euler_angles_data.csv  gyro_data.csv  kalman_filter_data.csv  log.py  magnetometer_data.csv  motor_input_data.csv
ciconia/: CMakeLists.txt  package.xml
ciconia/src/dynamixel_lib/: .read_write_node_mx28.py.swp  read_write_node_mx28.py  sync_read_write_servos_node.cpp
config/: pitot_tube_sensor_config.yaml  rviz_conf.rviz  vtol_joint_dynamics.yaml  xsensor_model_config.yaml
launch/: SITL.launch  test.launch  vtol.launch
mbed/ciconia-mbed-cube-f103/Inc/: dynamixel.h  main.h  stm32f1xx_it.h
mbed/ciconia-mbed-cube-f103/Src/: dynamixel.c  main.c  (+2 more)
meshes/: horizontalTail.STL  propBR.STL  propFR.STL  wing.STL
models/qrkod/: model.config
msg/: estimatedStates.msg  flight_input.msg
my_dynamixel_tutorial/: CMakeLists.txt  package.xml
plugins/src/: gazeboStatePublisherPlugin.cpp  joint_plugin.cpp
scripts/: KALMAN_Node.py  aerodynamic_database.mat  control.py  fligthDynamics.py  physics.py  plot.py  processImage.py  reindent.py  stateEstimator.py  utils.py
scripts/Controllers/: deneme.py  model_predictive_controller.py
scripts/SensorModels/: xsensSensorModel.py
scripts/camera_config/: cameraMatrix_webcam.txt
scripts/controllers/: lqr.py  pid.py
scripts/filters/: Kalman_Filter.py
scripts/sensorModels/: differentialPressureSensorModel.py  utils.py  xsensSensorModel.py
src/: control.py  physics _datcom.py  scenario.py
src/Controllers/: deneme2.py  lqr.py  model_predictive_controller.py
urdf/: vtol.gazebo  vtol.xacro
worlds/: vtol.world
xsens_ros_mti_driver/: CMakeLists.txt
xsens_ros_mti_driver/param/: xsens_mti_node.yaml
(+6 files in other folders)
